# serializer version: 1
# name: test_repaired_json_invaild_case[case.jsonx]
  dict({
    'body': '''
      Dear valued client,
      
      We are thrilled to announce that XYZ ELECTRONICS LTD. is celebrating its 50th anniversary in the Electrical and Electronics industry. Since our establishment in 1971, we have been committed to delivering exceptional quality, responsibility, and growth.
      
      Throughout the years, XYZ ELECTRONICS has become a leading manufacturer of high-quality magnet wires, offering the most extensive selection in Taiwan. Our range of products has expanded to include electronic components, optical fiber system products, power source switches, "green" products, and wind power solutions.
      
      To cater to the needs of our global clientele, we have established manufacturing plants overseas, ensuring prompt service and the latest techniques.
      
      Under our management strategy of "Energy, Reinnovation, Reliability," we continuously strive to improve and innovate, ensuring energy efficiency and reliability in all our products.
      
      One of our flagship products is the LSFFY Class F Low Temperature Wire. This wire exemplifies our commitment to providing high-quality materials and meeting the stringent requirements of electrical applications.
      
      We invite you to visit our website at https://xyz-electronics.en.taiwantrade.com/ to explore our comprehensive range of products and discover how XYZ ELECTRONICS can elevate your business with its cutting-edge solutions and unwavering commitment to quality.
      
      Thank you for your continued support and partnership. We look forward to celebrating this significant milestone with you.
      
      Best regards,
      [Your Name]
    ''',
    'subject': 'XYZ ELECTRONICS LTD.: Celebrating 50 Years of Excellence in the Electrical and Electronics Industry',
  })
# ---
# name: test_repaired_json_invaild_case[case2.jsonx]
  dict({
    'body': '''
      Dear valued client, 
      
      We are excited to announce the launch of our latest breakthrough product - the Mandelic Acid and Allantoin Acne-Care Calming Ampoule. This innovative serum is set to revolutionize the way we tackle acne, acne scars, and various skin concerns, delivering a transformative skincare experience like never before.
      
      At XXX Beauty Co. Ltd., we are committed to providing high-quality skincare solutions that meet the diverse needs of our customers. The Mandelic Acid and Allantoin Acne-Care Calming Ampoule is the epitome of our dedication to excellence. This exceptional serum is meticulously formulated to target common skin issues and offer a comprehensive approach to achieving clear, radiant, and blemish-free skin.
      
      Harnessing the power of nature's finest ingredients, our ampoule combines mandelic acid and allantoin to ensure optimal results in addressing acne, acne scars, and uneven skin tone. With regular use, this ampoule whitens spots, smooths out acne scars, improves skin absorption rate, and provides a soothing and moisturizing effect. It is specially formulated to calm sensitive skin and relieve redness, making it suitable for all skin types.
      
      The key ingredient, mandelic acid, has been scientifically proven to effectively improve the abnormality of hair follicle keratin, control sebum secretion, and combat metabolic acne. Additionally, allantoin, a powerful soothing agent, further enhances the efficacy of the ampoule, ensuring a truly transformative skincare experience.
      
      We invite you to visit our official website at [insert contact info url] to learn more about the Mandelic Acid and Allantoin Acne-Care Calming Ampoule and its transformative benefits. Discover the power of this exceptional serum and unlock the secret to clear, radiant, and blemish-free skin.
      
      For any media inquiries, please feel free to contact our spokesperson, 陳陳陳, at [insert contact info email]. You can also find more information on our website at [insert contact info url].
      
      Thank you for your continued support and trust in XXX Beauty Co. Ltd. We look forward to providing you with transformative skincare experiences.
      
      Best regards,
      [Your Name]
      XXX Beauty Co. Ltd.
    ''',
    "subject's": 'Introducing the Mandelic Acid and Allantoin Acne-Care Calming Ampoule',
  })
# ---
# name: test_repaired_json_invaild_case[case3.jsonx]
  dict({
    'body': '''
      Dear Valued Customer,
      
      We are proud to announce that is celebrating its 50th anniversary this year. For the past five decades, we have been providing top-quality hand and pneumatic tools to customers around the world. Our strict quality control process ensures that all items are made in accordance with DIN/ANSI/CE standards and under ISO & GS & TUV standard. We have worked with many international well-known brands such as Stanley, KS Tools, K Mart, Wurth, Lux, TOSAN, and more.
      
      To celebrate our 50th anniversary, we will be participating in Automechanika Frankfurt 2024, where we will be showcasing our latest products, including the 10pcs 1/2''Dr. Nut Driver Socket Set, 38pcs 1/4''Dr. Socket Wrench Set, Nut Driver Socket-Two Piece, Knife Sharpener, and 19pcs 3/4" Dr. Impact Socket Set.
      
      We invite you to visit our booth and learn more about our high-quality tools and services. For more information about our products, please visit our website at https://www.example.com.
      
      Thank you for your continued support.
      
      Sincerely,
      [Your Name]
    ''',
    'subject': 'Celebrates 50 Years of Excellence in Manufacturing High-Quality Tools',
  })
# ---
# name: test_repaired_json_invaild_case[case4.jsonx]
  dict({
    'body': '''
      Dear valued client,
      
      We are excited to share with you the latest news from We have revolutionized the E-Bike industry with our innovative aluminum frames for SPACIOUS Industrial Co., Ltd. in Taiwan. Our commitment to innovation and customer satisfaction has positioned us as a key player in the market.
      
      CEO Xiao Ming, Chen, emphasizes, "We provide the best quality products," reflecting our dedication to excellence.
      
      To learn more about our revolutionary aluminum frames and how they offer increased rigidity, stability, and safety for riders, we invite you to visit our website at https://example.com/. We believe that our innovative designs will support complex structures for electric bikes, ensuring a confident and secure riding experience.
      
      Thank you for your continued support, and we look forward to bringing you more groundbreaking developments in the future.
      
      Best regards,
      [Your Name]
  
    ''',
    'subject': 'Revolutionizing the E-Bike Industry with Innovative Aluminum Frames',
  })
# ---
# name: test_repaired_json_invalid_case_special
  dict({
    'a': '''
      
  
    ''',
  })
# ---
# name: test_repaired_json_simple_case
  dict({
  })
# ---
# name: test_repaired_json_simple_case.1
  dict({
    'foo': 'bar',
  })
# ---
# name: test_repaired_json_simple_case.2
  dict({
    'baz': 'qux',
    'foo': 'bar',
  })
# ---
# name: test_repaired_json_simple_case.3
  dict({
    'baz': 'qux',
    'foo': 'bar',
    'quux': 'corge',
  })
# ---
# name: test_repaired_json_simple_case.4
  dict({
    'foo': dict({
      'bar': 'baz',
    }),
  })
# ---
# name: test_repaired_json_simple_case.5
  dict({
    'foo': dict({
      'bar': dict({
        'baz': 'qux',
      }),
    }),
  })
# ---
# name: test_repaired_json_simple_case.6
  dict({
    'foo': dict({
      'bar': dict({
        'baz': dict({
          'qux': 'quux',
        }),
      }),
    }),
  })
# ---
# name: test_repaired_json_vaild_case[case0.json]
  dict({
    'age': 30,
    'email': 'johndoe@example.com',
    'name': 'John Doe',
  })
# ---
# name: test_repaired_json_vaild_case[case1.json]
  dict({
    'location': 'New York',
    'person': dict({
      'age': 25,
      'name': 'Alice',
    }),
  })
# ---
# name: test_repaired_json_vaild_case[case10.json]
  dict({
    'message': '''
      This is an escaped string with special characters: "quotes", \backslashes\, and 
      newlines.
    ''',
  })
# ---
# name: test_repaired_json_vaild_case[case11.json]
  dict({
    'unicode_example': 'This is a Unicode string: © OpenAI •',
  })
# ---
# name: test_repaired_json_vaild_case[case12.json]
  dict({
    'body': '''
      Dear valued client,
      
      We are thrilled to announce that XYZ ELECTRONICS LTD. is celebrating its 50th anniversary in the Electrical and Electronics industry. Since our establishment in 1971, we have been committed to delivering exceptional quality, responsibility, and growth.
      
      Throughout the years, XYZ ELECTRONICS has become a leading manufacturer of high-quality magnet wires, offering the most extensive selection in Taiwan. Our range of products has expanded to include electronic components, optical fiber system products, power source switches, "green" products, and wind power solutions.
      
      To cater to the needs of our global clientele, we have established manufacturing plants overseas, ensuring prompt service and the latest techniques.
      
      Under our management strategy of "Energy, Reinnovation, Reliability," we continuously strive to improve and innovate, ensuring energy efficiency and reliability in all our products.
      
      One of our flagship products is the LSFFY Class F Low Temperature Wire. This wire exemplifies our commitment to providing high-quality materials and meeting the stringent requirements of electrical applications.
      
      We invite you to visit our website at https://xyz-electronics.en.taiwantrade.com/ to explore our comprehensive range of products and discover how XYZ ELECTRONICS can elevate your business with its cutting-edge solutions and unwavering commitment to quality.
      
      Thank you for your continued support and partnership. We look forward to celebrating this significant milestone with you.
      
      Best regards,
      [Your Name]
    ''',
    'subject': 'XYZ ELECTRONICS LTD.: Celebrating 50 Years of Excellence in the Electrical and Electronics Industry',
  })
# ---
# name: test_repaired_json_vaild_case[case13.json]
  dict({
    'empty_array': list([
    ]),
    'empty_object': dict({
    }),
    'escape © OpenAI •': False,
    'escape"property': None,
    'int_array': list([
      1,
      2,
      3,
      4,
    ]),
    'int_in_array': list([
      1,
      2,
      3000.0,
    ]),
    'int_in_obj': dict({
      'a': 3,
    }),
    'sci_in_array': list([
      1.2,
      -1.2,
      0.00025,
      dict({
        'a': 0.00025,
        'b': 0.00025,
      }),
    ]),
    'scientific_notation_example': 2500.0,
    'x': list([
      2.5,
    ]),
    'y': dict({
      'a': 2.5,
      'b': 2.5,
    }),
  })
# ---
# name: test_repaired_json_vaild_case[case2.json]
  dict({
    'fruits': list([
      dict({
        'color': 'red',
        'fruit': 'apple',
      }),
      dict({
        'color': 'yellow',
        'fruit': 'banana',
      }),
    ]),
  })
# ---
# name: test_repaired_json_vaild_case[case3.json]
  dict({
    'employees': list([
      dict({
        'id': 101,
        'name': 'Employee 1',
      }),
      dict({
        'id': 102,
        'name': 'Employee 2',
      }),
    ]),
  })
# ---
# name: test_repaired_json_vaild_case[case4.json]
  dict({
    'age': None,
    'email': None,
    'name': 'Jane Smith',
  })
# ---
# name: test_repaired_json_vaild_case[case5.json]
  dict({
    'active': False,
    'status': True,
  })
# ---
# name: test_repaired_json_vaild_case[case6.json]
  dict({
    'float': 3.14,
    'integer': 42,
  })
# ---
# name: test_repaired_json_vaild_case[case7.json]
  dict({
    'colors': list([
      'red',
      'green',
      'blue',
    ]),
  })
# ---
# name: test_repaired_json_vaild_case[case8.json]
  dict({
    'emptyObject': dict({
    }),
  })
# ---
# name: test_repaired_json_vaild_case[case9.json]
  dict({
    'hobbies': list([
      'reading',
      'hiking',
    ]),
    'person': dict({
      'address': dict({
        'city': 'Cityville',
        'street': '123 Main St',
        'zip': '12345',
      }),
      'name': 'Bob',
    }),
  })
# ---
